force-app/main/default/objects/PV_Warehouse__c/PV_Warehouse__c.object-meta.xml
<CustomObject>
    <label>Inventory</label>
    <nameField>
        <label>PV-Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>