force-app/main/default/objects/PV_Warehouse__c/fields/Bin__c.field-meta.xml
<CustomField>
    <fullName>Bin__c</fullName>
    <label>Bin #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>