force-app/main/default/objects/PV_Warehouse__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <label>Part #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>