force-app/main/default/objects/PV_Warehouse__c/fields/Quantity_At_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_At_Hand__c</fullName>
    <label>Quantity At Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>