force-app/main/default/objects/PV_Warehouse__c/fields/SF_Warehouse_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Warehouse_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SF Warehouse ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>