force-app/main/default/objects/PV_Warehouse__c/fields/Warehouse_added_quantity__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_added_quantity__c</fullName>
    <label>Add New Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>