force-app/main/default/objects/PV_Warehouse__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Quantity_At_Hand__c</columns>
    <columns>Part__c</columns>
    <columns>Bin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>